2011-06-15  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c: Added new state, MESSAGE_HEADERS, which
	behaves the same as HEADERS but is only ever set when we are
	parsing the toplevel GMimeMessage object.
	(parser_step_headers): Be slightly more strict in handling
	malformed headers in the MESSAGE_HEADERS state so that trying to
	parse non-message streams fails (e.g. if someone tries to parse a
	jpeg stream).

2011-06-15  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c: Define nfds_t on OSX.

2011-06-10  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.5.8

2011-06-09  Jeffrey Stedfast  <fejj@gnome.org>

	Fix for bug #652056

	* gmime/gmime-param.c (decode_value): If STRICT_PARSER isn't
	defined, don't require the value to start with a valid character.

2011-06-08  Daniel Kahn Gillmor  <dkg@fifthhorseman.net>

	Fix for bug #651826

	* gmime/gmime-gpg-context.c
	(g_mime_gpg_context_[g,s]_set_use_agent): New functions to allow
	the invoker to declare that they expect there to be a functioning
	gpg-agent, and want gpg to talk to it for any needed credentials.

2011-06-08  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c: If building on Apple, force the use
	of our own implementation of poll() because Apple's poll() is
	broken on some versions of MacOS.

2011-03-18  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.ac: Bumped version to 2.5.7

2011-03-17  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-multipart-encrypted.c: Updated for crypto API
	changes.

	* gmime/gmime-multipart-signed.c: Updated for crypto API changes.

	* gmime/gmime-crypto-context.c (g_mime_crypto_context_verify): Now
	returns a GMimeSignatureList, the 'details' string was worthless
	for GpgMe backend.
	(GMimeDecryptResult): This is now a GObject.

	* gmime/gmime-pkcs7-context.c: Updated for crypto API changes.
